libs/libc: remove drivers/${ARCH} [1/1]
PD#SWPL-64380

Problem:
remove drivers/${ARCH}

Solution:
remove drivers/${ARCH}

Verify:
T5W_AT301/AT309

Signed-off-by: Kelvin Zhang <kelvin.zhang@amlogic.com>
Change-Id: I808fca90715d717312b38fff944e024d1aaf76c3

--- a/aml/CMakeLists.txt
+++ b/aml/CMakeLists.txt
@@ -12,7 +12,7 @@ aml_library_sources(
 	)
 
 aml_library_link_libraries(kernel__${KERNEL})
-aml_library_link_libraries(drivers__${ARCH})
+aml_library_link_libraries(drivers)
 aml_link_libraries()
 
 endif()
