libs/libc: Add help message in Kconfig. [1/1]
PD#SWPL-68240

Problem:
Refactor for all.

Solution:
Add help message in Kconfig.

Verify:
N/A

Change-Id: I471dd56360eb830573de1e15953df811bb460fcd
Signed-off-by: Xiaohu.Huang <xiaohu.huang@amlogic.com>

--- a/aml/Kconfig
+++ b/aml/Kconfig
@@ -1,3 +1,4 @@
 config LIBC_AML
-        bool "Libc implement by AML"
-
+	bool "Libc implement by AML"
+	help
+		Enable libc of AML's implementation.
