--- a/aml/Kconfig
+++ b/aml/Kconfig
@@ -1,3 +1,7 @@
+# Copyright (c) 2021-2022 Amlogic, Inc. All rights reserved.
+
+# SPDX-License-Identifier: MIT
+
 config LIBC_AML
 	bool "Libc implement by AML"
 	help
