libs/libc: fix printk.h. [1/1]
PD#SWPL-68240

Problem:
fix printk.h

Solution:
fix printk.h

Verify:
ad401_a113l

Signed-off-by: Kelvin Zhang <kelvin.zhang@amlogic.com>
Change-Id: Ide77f122eb9924a7487decdcc1ca12fe6dd9c955

--- a/newlib/CMakeLists.txt
+++ b/newlib/CMakeLists.txt
@@ -6,6 +6,10 @@ if(CONFIG_LIBC_STD)
 
 aml_add_library()
 
+aml_library_include_directories(
+	"${CMAKE_CURRENT_LIST_DIR}"
+)
+
 aml_library_sources(
 	syscalls.c
 	printk.c
