libc/aml: Refactor the aml libc. [1/1]
PD#SWPL-68240

Problem:
Add some libc function which is the AML version.

Solution:
Add some libc function which is the AML version.

Verify:
N/A

Change-Id: I6e833f94fd5eef9d96234cb6eafa7f4ad9aa8dec
Signed-off-by: xiaohu.huang <xiaohu.huang@amlogic.com>

--- a/aml/CMakeLists.txt
+++ b/aml/CMakeLists.txt
@@ -11,9 +11,18 @@ aml_library_sources(
 	aml_printf.c
 	aml_malloc.c
 	aml_free.c
+	aml_atoi.c
+	aml_isspace.c
+	aml_isdigit.c
+	aml_tolower.c
 	aml_memcpy.c
 	aml_memset.c
+	aml_memmove.c
+	aml_memcmp.c
 	aml_strlen.c
+	aml_strncpy.c
+	aml_strcasecmp.c
+	aml_strncasecmp.c
 	)
 
 aml_library_link_libraries(kernel__${KERNEL})
