lib/libc: fix kconfig illustrate. [1/1]
PD#SWPL-82206

Problem:
fix kconfig

Solution:
log dump to ram

Verify:
N/A

Signed-off-by: shijie.xiong <shijie.xiong@amlogic.com>
Change-Id: Ie20e0356b546bb1d4ab2f5457c284e17138471cc

--- a/logbuffer/Kconfig
+++ b/logbuffer/Kconfig
@@ -3,10 +3,10 @@
 # SPDX-License-Identifier: MIT
 
 config LOG_BUFFER
-    bool "Ram Log Interface"
+    bool "RAM Log Interface"
 	select KERNEL
     help
-      Enable ram log function.
+      Enable RAM log function.
 
 if LOG_BUFFER
 
