lib/libc: porting stdio interface to vfs. [1/1]
PD#SWPL-82206

Problem:
porting stdio interface to vfs.

Solution:
vfs interface

Verify:
N/A

Signed-off-by: shijie.xiong <shijie.xiong@amlogic.com>
Change-Id: I6c1527b11f935ceb4ada150733e27557926e4db7

--- a/newlib/CMakeLists.txt
+++ b/newlib/CMakeLists.txt
@@ -17,6 +17,9 @@ aml_library_sources(
 if(CONFIG_LOG_BUFFER)
 aml_library_link_libraries(libc__logbuffer)
 endif()
+if(CONFIG_VFS)
+aml_library_link_libraries(lib__vfs)
+endif()
 aml_library_link_libraries(kernel__${KERNEL})
 aml_library_link_libraries(drivers)
 target_link_libraries(${TARGET_NAME} -lc)
