lib/libc: Refactor the libc option in one group menu. [1/1]
PD#SWPL-68240

Problem:
Refactor the libc option in one group menu.

Solution:
Refactor the libc option in one group menu.

Verify:
N/A

Change-Id: I741a5ead95e544aa98e4760b3bb05f530354aefd
Signed-off-by: xiaohu.huang <xiaohu.huang@amlogic.com>

--- a/Kconfig
+++ b/Kconfig
@@ -2,6 +2,9 @@
 
 # SPDX-License-Identifier: MIT
 
+menu "libc selection"
 rsource "aml/Kconfig"
-rsource "logbuffer/Kconfig"
 rsource "newlib/Kconfig"
+endmenu
+
+rsource "logbuffer/Kconfig"
