lib/libc: Refactor to remove the dumplicate library dependence. [3/13]
PD#SWPL-68240

Problem:
Refactor that remove the dumplicate library dependence.

Solution:
Refactor that remove the dumplicate library dependence.

Verify:
N/A

Change-Id: Ic21f51d9d6b1d8bbff379615225223ad89ddac7c
Signed-off-by: xiaohu.huang <xiaohu.huang@amlogic.com>

--- a/newlib/CMakeLists.txt
+++ b/newlib/CMakeLists.txt
@@ -22,9 +22,8 @@ aml_library_link_libraries(lib__vfs)
 endif()
 aml_library_link_libraries(kernel__${KERNEL})
 aml_library_link_libraries(drivers)
-target_link_libraries(${TARGET_NAME} -lc)
-target_link_libraries(${TARGET_NAME} libc__newlib)
-target_link_libraries(${TARGET_NAME} -lc)
+
+aml_link_libraries()
 
 endif()
 
