lib/libc: add ftrace tool. [5/6]
PD#SWPL-84829

Problem:
ftrace tool.

Solution:
irq trace.

Verify:
N/A

Signed-off-by: shijie.xiong <shijie.xiong@amlogic.com>
Change-Id: Iabab5ee202ee52eaae9871b3aeb2e5d348967af9

--- a/newlib/CMakeLists.txt
+++ b/newlib/CMakeLists.txt
@@ -14,11 +14,11 @@ aml_library_sources(
 	syscalls.c
 )
 
-if(CONFIG_LOG_BUFFER)
-aml_library_link_libraries(libc__logbuffer)
-endif()
 if(CONFIG_VFS)
 aml_library_link_libraries(lib__vfs)
+endif()
+if(CONFIG_LOG_BUFFER)
+aml_library_link_libraries(utilities__logbuffer)
 endif()
 aml_library_link_libraries(kernel__${KERNEL})
 aml_library_link_libraries(drivers)
