libc/aml: refactor the libc switch strategy [5/5]
PD#SWPL-93074

Problem:
Add the code of the needed symbol for fastboot

Solution:
Add the code of the needed symbol for fastboot

Verify:
N/A

Change-Id: I5b3149f9505dab235d623dcef1c9b1764cbdbdaf
Signed-off-by: xiaohu.huang <xiaohu.huang@amlogic.com>

--- a/aml/CMakeLists.txt
+++ b/aml/CMakeLists.txt
@@ -13,8 +13,12 @@ aml_library_sources(
 	aml_malloc.c
 	aml_free.c
 	aml_atoi.c
-	aml_isspace.c
+	aml_errno.c
+	aml_isalpha.c
 	aml_isdigit.c
+	aml_islower.c
+	aml_isspace.c
+	aml_isupper.c
 	aml_tolower.c
 	aml_memcpy.c
 	aml_memset.c
@@ -22,6 +26,7 @@ aml_library_sources(
 	aml_memcmp.c
 	aml_strlen.c
 	aml_strncpy.c
+	aml_strtoul.c
 	aml_strcasecmp.c
 	aml_strncasecmp.c
 	)
