lib/libc: add new features to link cpp library for arm64 [3/3]
PD#SWPL-90928

Problem:
add some lost functions

Solution:
add some lost functions

Verify:
N/A

Change-Id: I33d3b825355f04de9556ded68836b3a35a89887b
Signed-off-by: xiaohu.huang <xiaohu.huang@amlogic.com>

--- a/aml/CMakeLists.txt
+++ b/aml/CMakeLists.txt
@@ -9,17 +9,20 @@ aml_add_library()
 aml_library_sources(
 	aml_scanf.c
 	aml_putchar.c
+	aml_fprintf.c
 	aml_printf.c
 	aml_malloc.c
 	aml_free.c
 	aml_atoi.c
 	aml_errno.c
+	aml_impure.c
 	aml_isalpha.c
 	aml_isdigit.c
 	aml_islower.c
 	aml_isspace.c
 	aml_isupper.c
 	aml_tolower.c
+	aml_strcmp.c
 	aml_strlen.c
 	aml_strncpy.c
 	aml_strtoul.c
