lib/libc: add printf float number for aml libc [2/5]
PD#SWPL-90928

Problem:
add printf float number for aml libc

Solution:
add printf float number for aml libc

Verify:
N/A

Change-Id: I425ecdf099078418478ca400bf05715689c9f167
Signed-off-by: xiaohu.huang <xiaohu.huang@amlogic.com>

--- a/aml/CMakeLists.txt
+++ b/aml/CMakeLists.txt
@@ -7,6 +7,7 @@ if(CONFIG_LIBC_AML)
 aml_add_library()
 
 aml_library_sources(
+	aml_cvt.c
 	aml_scanf.c
 	aml_putchar.c
 	aml_fprintf.c
@@ -24,6 +25,7 @@ aml_library_sources(
 	aml_tolower.c
 	aml_strcmp.c
 	aml_strlen.c
+	aml_strnlen.c
 	aml_strncpy.c
 	aml_strtoul.c
 	aml_strcasecmp.c
