lib/libc: decrease code size by use std to aml libc for mcuboot. [1/2]
PD#SWPL-112544

Problem:
add the lost functions to aml_libc for mcuboot.

Solution:
add the lost functions and code switch to aml_libc for mcuboot.

Verify:
N/A

Change-Id: I6ae5b9e24bb9ff02d1283fc0b023689ac2d86715
Signed-off-by: xiaohu.huang <xiaohu.huang@amlogic.com>

--- a/aml/CMakeLists.txt
+++ b/aml/CMakeLists.txt
@@ -8,12 +8,15 @@ aml_add_library()
 
 aml_library_sources(
 	aml_cvt.c
+	aml_ctype.c
 	aml_scanf.c
 	aml_putchar.c
 	aml_fprintf.c
 	aml_printf.c
 	aml_malloc.c
+	aml_calloc.c
 	aml_free.c
+	aml_fflush.c
 	aml_atoi.c
 	aml_errno.c
 	aml_impure.c
@@ -23,11 +26,18 @@ aml_library_sources(
 	aml_isspace.c
 	aml_isupper.c
 	aml_tolower.c
+	aml_strcat.c
+	aml_strncat.c
 	aml_strcmp.c
+	aml_strncmp.c
 	aml_strlen.c
 	aml_strnlen.c
+	aml_strcpy.c
 	aml_strncpy.c
 	aml_strtoul.c
+	aml_sprintf.c
+	aml_snprintf.c
+	aml_vsnprintf.c
 	aml_strcasecmp.c
 	aml_strncasecmp.c
 	)
