[SoC common] : [libc/aml] : Add include dir for the module [1/1]
PD#SWPL-100419

Problem:
Add include dir for the module

Solution:
Add include dir for the module

Verify:
N/A

Change-Id: I84cafed7ccfce2eb71c994c73ab038b4fe2c12f9
Signed-off-by: xiaohu.huang <xiaohu.huang@amlogic.com>

--- a/aml/CMakeLists.txt
+++ b/aml/CMakeLists.txt
@@ -6,6 +6,10 @@ if(CONFIG_LIBC_AML)
 
 aml_add_library()
 
+aml_library_include_directories(
+	${CMAKE_CURRENT_SOURCE_DIR}
+)
+
 aml_library_sources(
 	aml_cvt.c
 	aml_ctype.c
